azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__parse_tag_directive-20.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..22
      Directive@0..22
        DirectiveToken@0..1 "%"
        DirectiveName@1..4 "TAG"
        InlineSeparator@4..5 " "
        NamedTagHandle@5..11 "!yaml!"
        InlineSeparator@11..12 " "
        Error@12..13 "{"
        InlineSeparator@13..14 " "
        CommentText@14..22
          CommentToken@14..15 "#"
          CommentBody@15..22 "comment"
    ,
    errors: [
        Diagnostic {
            span: 12..13,
            severity: Error,
            message: "invalid initial tag prefix character",
        },
    ],
}
