azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__parse_tag_directive-25.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..46
      Directive@0..46
        DirectiveToken@0..1 "%"
        DirectiveName@1..4 "TAG"
        InlineSeparator@4..5 " "
        NamedTagHandle@5..11 "!yaml!"
        InlineSeparator@11..12 " "
        TagPrefix@12..46 "!https://example.com: ..."
    ,
    errors: [],
}
