azure-pipelines-analyzer/src/syntax/parser/snapshots/azure_pipelines_analyzer__syntax__parser__tests__parse_tag_directive-26.snap
---
source: azure-pipelines-analyzer/src/syntax/parser/tests.rs
expression: parse
---
Parse {
    node: Root@0..30
      Directive@0..30
        DirectiveToken@0..1 "%"
        DirectiveName@1..4 "TAG"
        InlineSeparator@4..5 " "
        NamedTagHandle@5..11 "!yaml!"
        InlineSeparator@11..12 " "
        TagPrefix@12..30 "tag:yaml.org,2002:"
    ,
    errors: [],
}
